# gtostudio

./: .gitignore  MULTITHREADING_DEBUG_LOG.md  start-dev.sh
.claude/: launch.json
docs/: action-path-navigation-prd.md  pre-solve-configuration-prd.md
engine/src/: utility.rs
engine/wasm/: Cargo.toml  workerHelpers.js
engine/wasm/src/: lib.rs  rayon_adapter.rs
web/: next.config.ts  package-lock.json  package.json
web/public/: solver-worker.js  solver_wasm.js  solver_wasm_bg.wasm  solver_wasm_bg.wasm.d.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/simulations/: page.tsx
web/src/app/solve/: page.tsx
web/src/app/solve/dev-fixtures/: solves.json
web/src/lib/: poker.ts  solver-worker.ts  solver_wasm.d.ts
