[package]
name = "solver-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
postflop-solver = { path = "..", features = ["rayon"], default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
rayon = "1.8.0"
spmc = "0.3.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
